--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Contact - School of Computer Studies | Arellano University</title>
+    <title>About us - School of Computer Studies | Arellano University</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -84,9 +84,9 @@
         <h1>Contact Us</h1>
         <nav>
             <ul>
-                <li><a href="file:///C:/Users/bhern/Downloads/Finals/Finals.html">Home</a></li>
-                <li><a href="file:///C:/Users/bhern/Downloads/Finals/Programs%20page.html">Programs</a></li>
-                <li><a href="file:///C:/Users/bhern/Downloads/Finals/Facilities%20page.html">Facilities</a></li>
+                <li><a href="https://bhernaleyteodoro.github.io/Teodoro/Finals.html">Home</a></li>
+                <li><a href="https://bhernaleyteodoro.github.io/Teodoro/Programs%20page.html">Programs</a></li>
+                <li><a href="https://bhernaleyteodoro.github.io/Teodoro/Facilities%20page.html">About Us</a></li>
             </ul>
         </nav>
     </header>
