--- a/Contact.html
+++ b/Contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About us - School of Computer Studies | Arellano University</title>
+    <title>Contact - School of Computer Studies | Arellano University</title>
     <style>
         body {
             font-family: Arial, sans-serif;
